Remove logging for the time being

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -10,10 +10,10 @@
         "Host": "localhost",
         "Port": 8123,
         "Ssl": false,
-        "Token": "insert_token_later_in_appsettings"
+        "Token": ""
     },
     "NetDaemon": {
-        "ApplicationConfigurationFolder": "./apps"
+        "ApplicationConfigurationFolder": "./Apps"
     },
     "CodeGeneration": {
         "Namespace": "HomeAssistantGenerated",
