--- a/tests/NetDaemon.Tests.csproj
+++ b/tests/NetDaemon.Tests.csproj
@@ -13,6 +13,7 @@
         <PackageReference Include="AutoFixture.AutoMoq" Version="4.18.1" />
         <PackageReference Include="coverlet.collector" Version="6.0.0"/>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
+        <PackageReference Include="Microsoft.Reactive.Testing" Version="6.0.1" />
         <PackageReference Include="Moq.AutoMock" Version="3.5.0" />
         <PackageReference Include="NUnit" Version="3.14.0"/>
         <PackageReference Include="NUnit.Analyzers" Version="3.9.0"/>
